Added API token to the application
